dummy API file added, updates in order details page

--- a/src/components/orderdatatable/Orderdatatable.scss
+++ b/src/components/orderdatatable/Orderdatatable.scss
@@ -56,6 +56,10 @@
       background-color: rgba(0, 128, 0, 0.05);
       color: green;
     }
+    &.delivered {
+      background-color: rgba(0, 128, 0, 0.05);
+      color: green;
+    }
   }
 
   .cellAction {
