--- a/src/pages/singleOrder/singleOrder.scss
+++ b/src/pages/singleOrder/singleOrder.scss
@@ -45,6 +45,21 @@
               color: #555;
             }
 
+            .statusdetailItem{
+              margin-bottom: 25px;
+              font-size: 14px;
+
+              .itemKey {
+                font-weight: bold;
+                color: gray;
+                margin-right: 5px;
+              }
+
+              .itemValue {
+                font-weight: 300;
+              }
+
+            }
             .detailItem {
               margin-bottom: 10px;
               font-size: 14px;
@@ -58,6 +73,10 @@
               .itemValue {
                 font-weight: 300;
               }
+
+             
+                
+              
             }
           }
         }
@@ -74,11 +93,61 @@
       padding: 20px;
       margin: 10px 20px;
     }
+    .heading {
+      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+      padding: 20px;
+      margin: 10px 20px;
+
+      .headTitle {
+        font-size: 16px;
+        color: #7451f8;;
+      }
+    }
+
 
     .title {
       font-size: 16px;
-      color: lightgray;
+      color: #b09cf7;
       margin-bottom: 20px;
     }
+
+   
+  }
+
+  .pending {
+    background-color: rgba(255, 0, 0, 0.05);
+    color: crimson;
+    font-weight: 300;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  .confirmed {
+    background-color: rgba(0, 128, 0, 0.05);
+    color: lightseagreen;
+    font-weight: 300;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  .ontheway {
+    background-color: rgba(255, 217, 0, 0.05);
+    color: goldenrod;
+    font-weight: 300;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  .completed {
+    background-color: rgba(0, 128, 0, 0.05);
+    color: green;
+    font-weight: 300;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  .delivered {
+    background-color: rgba(0, 128, 0, 0.05);
+    color: green;
+    font-weight: 300;
+    padding: 5px;
+    border-radius: 5px;
   }
 }
